--- a/head.html
+++ b/head.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="p:domain_verify" content="yJyUSQ8U4NKaWH9aH30nXtptalV0gHK1"/>
 <script type="speculationrules">
     {
         "prerender": [{
